# lotus-ffxi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
ffxi/: CMakeLists.txt  config.cpp  config.cppm  config.h  ffxi.cpp  ffxi.cppm  ffxi.h  game.cpp  game.cppm  main.cpp  particle_tester.cpp  particle_tester.cppm  particle_tester.h  scheduler_resources.cpp  scheduler_resources.cppm  scheduler_resources.h  system_dat.cpp  system_dat.cppm  system_dat.h  test_loader.cppm  test_loader.h  util.h  vana_time.cppm  vana_time.h
ffxi/audio/: CMakeLists.txt  adpcm.cpp  adpcm.cppm  adpcm.h  adpcmstream.cpp  adpcmstream.cppm  adpcmstream.h  ffxi_audio.cpp  ffxi_audio.cppm  ffxi_audio.h  pcm.cpp  pcm.cppm  pcm.h
ffxi/dat/: CMakeLists.txt  cib.cpp  cib.cppm  cib.h  d3m.cpp  d3m.cppm  d3m.h  dat.cpp  dat.cppm  dat.h  dat_chunk.h  dat_loader.cpp  dat_loader.cppm  dat_loader.h  dxt3.cpp  dxt3.cppm  dxt3.h  generator.cpp  generator.cppm  generator.h  key_tables.cppm  key_tables.h  mmb.cpp  mmb.cppm  mmb.h  mo2.cpp  mo2.cppm  mo2.h  mzb.cpp  mzb.cppm  mzb.h  os2.cpp  os2.cppm  os2.h  scheduler.cpp  scheduler.cppm  scheduler.h  sep.cpp  sep.cppm  sep.h  (+2 more)
ffxi/entity/: CMakeLists.txt  actor.cpp  actor.cppm  actor.h  actor_data.cppm  actor_data.h  actor_skeleton_static.cpp  actor_skeleton_static.cppm  actor_skeleton_static.h  camera_third_person_classic.cppm  camera_third_person_modern.cppm  landscape_entity.cpp  landscape_entity.cppm  landscape_entity.h  particle.cpp  particle.cppm  particle.h  third_person_ffxi_camera.cpp  third_person_ffxi_camera.h  third_person_ffxiv_camera.cpp  third_person_ffxiv_camera.h
ffxi/entity/component/: CMakeLists.txt  actor.cpp  actor.cppm  actor_component.cpp  actor_component.h  actor_skeleton.cpp  actor_skeleton.cppm  actor_skeleton_component.cpp  actor_skeleton_component.h  camera_third_person.cpp  camera_third_person.cppm  camera_third_person_component.cpp  camera_third_person_component.h  classic_third_person_input_component.cpp  classic_third_person_input_component.h  equipment_test.cpp  equipment_test.cppm  equipment_test_component.cpp  equipment_test_component.h  (+26 more)
ffxi/network/: CMakeLists.txt  network.cpp  network.h
ffxi/shaders/: CMakeLists.txt  d3m.slang  mmb.slang  raytrace.slang  raytrace_d3m.slang  raytrace_mmb.slang  raytrace_sk2.slang  raytrace_water.slang  sk2.slang
(+4 files in other folders)
